# func-analysis

./: AGENT.md  Cargo.toml  README.md
src/: banach.rs  compact.rs  fredholm.rs  hilbert.rs  lib.rs  operator.rs  sobolev.rs  spectral.rs
